WIP: One footer per screen; vert alignment issue

--- a/navbar.css
+++ b/navbar.css
@@ -36,6 +36,7 @@
     padding-bottom: .5rem;
     
 }
+
  
 /* Test accordion code top */
 
@@ -61,7 +62,7 @@
     color: black;
     cursor: pointer;
     --max-font: 20;
-    --min-font: 16;
+    --min-font: 18;
     font-family: var(--main-font);
     font-size: var(--responsive);
   }
